# AlphaZeroFromScratch

./: .gitignore  3.Model.ipynb  pyproject.toml
alpha_zero_from_scratch/: 1.TicTacToe.ipynb  7.AlphaTweaks.ipynb
discrete_maze/: 1.maze.ipynb  2.MCTS.ipynb  3.Model.ipynb  4.AlphaTrain_binaryreward_4x4_maxsteps2_obswindowbugfix.ipynb  4.AlphaTrain_binaryreward_4x4_maxsteps2_softmaxbugfix.ipynb  4.AlphaTrain_binaryreward_4x4_maxsteps2_wstepsleft.ipynb  4.AlphaTrain_fullval.ipynb  AlphaParallel_binaryreward.ipynb  AlphaParallel_curriculum_plateau42_investigation.ipynb  AlphaParallel_curriculum_splitbatch.ipynb  AlphaParallel_curriculum_targetplane.ipynb  AlphaParallel_history.ipynb  AlphaParallel_multimaze.ipynb  behavior_cloning.ipynb  demonstration_dataset_generator.ipynb  maze.py  maze_dataset.py  resnet.py  search_algorithm.py
discrete_maze/checkpoints/: maze_4to100_curriculum_last3_95p_model_120.pt  maze_4to100_curriculum_last3_95p_model_150.pt  maze_4to100_curriculum_last3_95p_model_180.pt  maze_4to100_curriculum_last3_95p_model_210.pt  maze_4to100_curriculum_last3_95p_model_30.pt  maze_4to100_curriculum_last3_95p_model_60.pt  maze_4to100_curriculum_last3_95p_model_90.pt  maze_4to100_curriculum_last3_95p_splitbatch_model_30.pt  maze_4to100_curriculum_last3_95p_splitbatch_model_60.pt  maze_4to100_curriculum_last3_97p_model_120.pt  maze_4to100_curriculum_last3_97p_model_149.pt  maze_4to100_curriculum_last3_97p_model_30.pt  maze_4to100_curriculum_last3_97p_model_60.pt  maze_4to100_curriculum_last3_97p_model_90.pt  maze_4to100_curriculum_model_30.pt  (+44 more)
(+17 files in other folders)
