[tool.poetry]
name = "alphazerofromscratch"
version = "0.1.0"
description = ""
authors = ["Shao Yuan <flossy_lineage.0b@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
tqdm = "^4.66.6"
torch = "^2.5.1"
ipywidgets = "^8.1.5"
wandb = "^0.18.6"
hydra-core = "^1.3.2"
zarr = "^2.18.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
